# Bens-Game

./: .gitignore  CMakeLists.txt  README.md  project.vim
assets/: CMakeLists.txt
config/: CMakeLists.txt  config.xml  layout.xml
docs/: PartsDiagram.odt  README.md
lib/: .gitignore  CMakeLists.txt  README.md  trim_libraries.py
lib/SDL2_gfx-1.0.1/SDL2_gfx-1.0.1/: SDL2_gfxPrimitives.c  SDL2_rotozoom.c
src/: Box.h  BoxUtils.cpp  BoxUtils.h  CMakeLists.txt  CompPosition.cpp  CompPosition.h  Component.h  Config.cpp  Config.h  Constants.h  Definitions.cpp  Definitions.h  DisableWarningsEnd.h  DisableWarningsStart.h  Engine.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Graphics.h  GraphicsSystem.h  InputSystem.h  Logger.cpp  Logger.h  Screen.h  Source.cpp  TestComponent.cpp  TestComponent.h  Texture.h  Timer.cpp  Timer.h  main.cpp  tmp.txt  tmpSource.cpp
